--- a/config.yaml
+++ b/config.yaml
@@ -6,33 +6,23 @@ paginate: 20
 paginatePath: "page"
 ignoreFiles:
   - "(?i)/\\.hide/$"
-markup:
-  goldmark:
-    renderer:
-      unsafe: true
 
 social:
   twitter: "BroMatthewCap"
 
 markup:
+  defaultMarkdownHandler: goldmark
+
   goldmark:
-    duplicateResourceFiles: false
     extensions:
-      definitionList: true
-      footnote: true
-      linkify: true
-      linkifyProtocol: 'https'
-      strikethrough: true
-      table: true
-      taskList: true
-      extras:
-        delete:
-          enable: false
-        insert:
-          enable: false
-        mark:
-          enable: false
-        subscript:
-          enable: false
-        superscript:
-          enable: false
+      linkify: true  # Enables automatic linking of URLs
+      strikethrough: true  # Enables strikethrough syntax
+      taskList: true  # Enables task lists
+      definitionList: true  # Enables definition lists
+      footnote: true  # Enables footnotes
+      typographer: true  # Enables typographic enhancements
+      cjk:
+        enable: false  # CJK support (set to true if needed)
+      
+    renderer:
+      unsafe: true  # Allows raw HTML in Markdown
