--- a/config.yaml
+++ b/config.yaml
@@ -46,9 +46,22 @@ markup:
               - "\\)"
   
 params:
-  math: true
   siteLogo: "/images/logo.png"
   siteTitle: "My Website"
   socialLinks:
     twitter: "https://twitter.com/yourhandle"
     youtube: "https://youtube.com/yourchannel"
+  menu:
+    - name: "Home"
+      url: "/"
+    - name: "About"
+      url: "/about/"
+    - name: "Services"
+      url: "/services/"
+      submenu:
+        - name: "Web Development"
+          url: "/services/web-development/"
+        - name: "SEO"
+          url: "/services/seo/"
+    - name: "Contact"
+      url: "/contact/"
