--- a/config.yaml
+++ b/config.yaml
@@ -6,6 +6,7 @@ ignoreFiles:
 
 # Configuration for Hugo using Goldmark with all extensions
 markup:
+  defaultMarkdownHandler: goldmark
   goldmark:
     renderer:
       unsafe: true
@@ -41,6 +42,3 @@ markup:
               - "$"
             - - "\\("
               - "\\)"
-  
-params:
-  math: true  # Enable math support (optional)
