--- a/config.yaml
+++ b/config.yaml
@@ -7,5 +7,8 @@ ignoreFiles:
 social:
   twitter: "@BroMatthewOFMC"
 
-[outputs]
-  home = ["HTML", "RSS", "JSON"]
+outputs:
+  home:
+    - HTML
+    - RSS
+    - JSON
